# x940

./: .editorconfig  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MT940.md  README.md  TECHNICAL.md  USAGE.md  bump.sh  rustfmt.toml
.github/workflows/: check-format.yml  release.yml  tag.yml  test-cli.yml  test-core.yml  test-node.yml  test-python.yml  test-wasm.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: cli_tests.rs
crates/core/: Cargo.toml
crates/core/benches/: parse_bench.rs
crates/core/src/: amount_utils.rs  date_utils.rs  error.rs  lib.rs  models.rs  parser.rs  statement.rs
crates/core/src/decoders/: angular.rs  german_gvc.rs  mod.rs  swift_structured.rs  unstructured.rs
crates/core/src/serializers/: camt053.rs  csv.rs  json.rs  mod.rs
crates/core/tests/: decoder_chain.rs  golden_files.rs  public_api.rs
crates/core/tests/data/angular/: angular_payload_3.sta
crates/core/tests/data/gvc/: gvc_payload_2.sta
crates/core/tests/data/stress/: stress_payload_5.sta
crates/core/tests/data/swift/: continuation_payload.sta  swift_payload_1.sta
crates/core/tests/data/unstructured/: us_payload_4.sta
crates/node/: Cargo.toml  README.md  package-lock.json  package.json
crates/node/src/: lib.rs
crates/node/tests/: test_auto_detect.js  test_edge_cases.js  test_export.js  test_parse.js
crates/python/: Cargo.toml  README.md  pyproject.toml
crates/python/src/: lib.rs
crates/python/tests/: conftest.py  test_auto_detect.py  test_edge_cases.py  test_export.py  test_parse.py
crates/wasm/: Cargo.toml  package.json
crates/wasm/src/: lib.rs
crates/wasm/tests/: test_auto_detect.js  test_edge_cases.js  test_export.js  test_parse.js
