[workspace]
members = [
    "crates/core",
    "crates/cli",
    "crates/python",
    "crates/node",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Tahzeer A"]
license = "GPL-3.0-or-later"
repository = "https://github.com/tahzeer/x940"
description = "High-performance MT940 bank statement parser with JSON, CSV, and camt.053 export"
keywords = ["mt940", "swift", "bank-statement", "camt", "iso20022"]
categories = ["parser-implementations", "finance"]

[workspace.dependencies]
# Error handling
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Decimal math
rust_decimal = { version = "1", features = ["serde"] }
rust_decimal_macros = "1"

# Parsing
pest = "2"
pest_derive = "2"
regex = "1"

# XML generation
quick-xml = "0.37"

# Logging
log = "0.4"
env_logger = "0.11"

# CLI
clap = { version = "4", features = ["derive"] }

# Python binding
pyo3 = { version = "0.23", features = ["chrono"] }

# Node.js binding
napi = { version = "2", features = ["napi4", "serde-json"] }
napi-derive = "2"

# Testing
rstest = "0.23"
proptest = "1"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 1
