[package]
name = "x940"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "x940 CLI: transform SWIFT MT940 bank statements into JSON, CSV, and camt.053"

[dependencies]
x940rs = { path = "../core" }
clap.workspace = true
env_logger.workspace = true
log.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[[bin]]
name = "x940"
path = "src/main.rs"
