[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "x940"
version = "0.1.1"
description = "High-performance MT940 bank statement parser with JSON, CSV, and camt.053 export"
requires-python = ">=3.8"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Tahzeer A" }]
keywords = ["mt940", "swift", "bank-statement", "camt", "iso20022"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Office/Business :: Financial :: Accounting",
]

[project.urls]
Repository = "https://github.com/tahzeer/x940"

[tool.maturin]
features = ["pyo3/extension-module"]
