[package]
name = "x940wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "x940 WASM binding: MT940 parser for browser/deno/bun via wasm-bindgen"

[lib]
crate-type = ["cdylib"]

[dependencies]
x940rs = { path = "../core" }
wasm-bindgen.workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[dev-dependencies]
wasm-bindgen-test.workspace = true
